tests/src/frontend/syntax/invalid/string_escape_too_short.sk
fun main(): String {
  "\u0DF"
}
